Fixed navigation - footer overlap on admin pages

--- a/public/stylesheets/navigation.css
+++ b/public/stylesheets/navigation.css
@@ -46,6 +46,7 @@ nav ul {
 	display: block;
 	z-index: 1;
 	padding-left: 40px;
+	padding-bottom: 100px;
 	position: relative;
 }
 
